# projects

./: filter_files.py  incremental_push.py  update_readme_links_2.py
CVAnalyzer/: README.md  README.rst  setup.py
CineSuggest/: README.md
CipherKey/: Car_Race_index.html  Pentagon.html  README-Emojis.md  README.md  Rock_Paper_Scissors_index.html  Tetris_index.html  comic.html  curate.html  fancyCSS.html  ponyBoop.html  skillhelp.html
DataCanvas/: README.md
Discordian/: README.ja.rst  pyproject.toml
DocuChat/: README.md
EstateOracle/: README.md
FaceMorpher/: README.md
FileHound/: README.md
FireWallSentinel/: CITATION  README.md  requirements.txt  setup.py
FlashChat/: README.md  pyproject.toml
GPTerminal/: README.md  pyproject.toml
HighlightPro/: README.md  READMEb.md  changes.txt  pipcl.py  setup.py
IdentityLens/: README.md  README_Japanese.md  setup.py
InvoiceGenie/: README.rst  pyproject.toml
JumpQuest/: README.rst
LingoLink/: README.rst
LinkShrink/: README.md  pyproject.toml
Mark2Web/: README.md  setup.py
MaskGuard/: README.md
MelodyMind/: README.md  setup.py
MeteoDash/: README.md
NeuroChat/: README.md  pyproject.toml
NodeGraphia/: README.rst
PixelForge/: README.md  pyproject.toml  setup.py  travis_config.sh
PixelForge/docker/manylinux2014/: Dockerfile_aarch64  Dockerfile_x86_64
PixelForge/docker/manylinux_2_28/: Dockerfile_aarch64  Dockerfile_x86_64
PixelForge/docker/musllinux_1_2/: Dockerfile_aarch64  Dockerfile_x86_64
PixelForge/patches/: patchQtPlugins
QuickQR/: README.rst  pyproject.toml
VibeCheck/: setup.py  (+1 more)
(+330 files in other folders)
