[build-system]
requires = [
  "numpy<2.0; python_version<'3.9'",
  "numpy==2.0.2; python_version>='3.9' and python_version<'3.13'",
  "numpy==2.1.3; python_version=='3.13'",
  "numpy==2.3.2; python_version=='3.14'",
  "packaging",
  "pip",
  "scikit-build>=0.14.0",
  "setuptools==59.2.0; python_version<'3.12'",
  "setuptools<70.0.0; python_version>='3.12'",
]
# use a custom backend to manage CMake check / installation
# see https://scikit-build.readthedocs.io/en/latest/usage.html#adding-cmake-as-building-requirement-only-if-not-installed-or-too-low-a-version
build-backend = "backend"
backend-path = ["_build_backend"]
